# arknights-game-model

./: .gitignore  README.md  character_model.py  excels.py  gamedata_const_model.py  interactive.py  item_model.py  load_data.py  log.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
arknights_game_model/: __main__.py  building_model.py  character_model.py  config.py  game_data.py  item_info_model.py  item_model.py  model.py  stage_model.py  utils.py
arknights_game_model/_raw_game_data/: __init__.py  building_data.py  campaign_table.py  char_patch_table.py  character_table.py  game_data.py  gamedata_const.py  item_table.py  model.py  stage_table.py  uniequip_table.py
arknights_game_model/_raw_game_data/excel/: __init__.py  building_data.py  campaign_table.py  char_patch_table.py  character_table.py  gamedata_const.py  item_table.py  stage_table.py  uniequip_table.py
arknights_game_model/penguin_stats/result/: matrix.py
arknights_game_model/prts_wiki/: char_cn_online_time_patch.py
arknights_game_model/skland/: https_zonai_skland_com_api_v1_game_cultivate_player.py  https_zonai_skland_com_api_v1_game_player_binding.py  https_zonai_skland_com_api_v1_game_player_info.py  https_zonai_skland_com_api_v1_search_user.py  https_zonai_skland_com_api_v1_user.py  https_zonai_skland_com_api_v1_user_center.py
arknights_game_model/yituliu/: item_value.py
prts_wiki/: char_cn_online_time_patch.py
yituliu/: item_value.py
yituliu/api_model/: item_value.py
