[project]
name = "arknights-game-model"
version = "0.1.1"
description = "Arknights game model"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.11.0",
    "pyperclip>=1.11.0",
]

[project.scripts]
akm = "arknights_game_model.__main__:interactive"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "arknights_game_model"
module-root = ""

[tool.ruff]
line-length = 88
