[project]
name = "arknights-game-model"
version = "0.1.1"
description = "Arknights game model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.11.0",
    "pyperclip>=1.11.0",
]

[project.scripts]
akm = "arknights_game_model.__main__:interactive"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "arknights_game_model"
module-root = ""

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E4",  # pycodestyle errors
    "E7",  # pycodestyle errors
    "E9",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "A",  # flake8-builtins
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PYI",  # flake8-pyi
    "RET501",  # unnecessary-return-none
    "RET502",  # implicit-return-value
    "RET503",  # implicit-return
    "RUF",  # Ruff-specific rules
    "UP",  # pyupgrade
    "TID",  # flake8-tidy-imports
    "TC",  # flake8-type-checking
]
ignore = [
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
]

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
split-on-trailing-comma = false
